--- a/webview-ui/src/i18n/locales/de/settings.json
+++ b/webview-ui/src/i18n/locales/de/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "Anbieter auswählen",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI-kompatibel",
+		"openaiCompatibleBaseUrlLabel": "Basis-URL:",
+		"openaiCompatibleApiKeyLabel": "API-Schlüssel:",
 		"openaiKeyLabel": "OpenAI-Schlüssel:",
 		"modelLabel": "Modell",
 		"selectModelPlaceholder": "Modell auswählen",
