--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -40,7 +40,10 @@
 		"selectProviderPlaceholder": "Select provider",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI Compatible",
 		"openaiKeyLabel": "OpenAI Key:",
+		"openaiCompatibleBaseUrlLabel": "Base URL:",
+		"openaiCompatibleApiKeyLabel": "API Key:",
 		"modelLabel": "Model",
 		"selectModelPlaceholder": "Select model",
 		"ollamaUrlLabel": "Ollama URL:",
