--- a/webview-ui/src/i18n/locales/fr/settings.json
+++ b/webview-ui/src/i18n/locales/fr/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "Sélectionner un fournisseur",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "Compatible OpenAI",
+		"openaiCompatibleBaseUrlLabel": "URL de base :",
+		"openaiCompatibleApiKeyLabel": "Clé API :",
 		"openaiKeyLabel": "Clé OpenAI :",
 		"modelLabel": "Modèle",
 		"selectModelPlaceholder": "Sélectionner un modèle",
