--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "प्रदाता चुनें",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI संगत",
+		"openaiCompatibleBaseUrlLabel": "आधार URL:",
+		"openaiCompatibleApiKeyLabel": "API कुंजी:",
 		"openaiKeyLabel": "OpenAI कुंजी:",
 		"modelLabel": "मॉडल",
 		"selectModelPlaceholder": "मॉडल चुनें",
