--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "Seleziona fornitore",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "Compatibile con OpenAI",
+		"openaiCompatibleBaseUrlLabel": "URL di base:",
+		"openaiCompatibleApiKeyLabel": "Chiave API:",
 		"openaiKeyLabel": "Chiave OpenAI:",
 		"modelLabel": "Modello",
 		"selectModelPlaceholder": "Seleziona modello",
