--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "プロバイダーを選択",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI互換",
+		"openaiCompatibleBaseUrlLabel": "ベースURL：",
+		"openaiCompatibleApiKeyLabel": "APIキー：",
 		"openaiKeyLabel": "OpenAIキー：",
 		"modelLabel": "モデル",
 		"selectModelPlaceholder": "モデルを選択",
