--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "제공자 선택",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI 호환",
+		"openaiCompatibleBaseUrlLabel": "기본 URL:",
+		"openaiCompatibleApiKeyLabel": "API 키:",
 		"openaiKeyLabel": "OpenAI 키:",
 		"modelLabel": "모델",
 		"selectModelPlaceholder": "모델 선택",
