--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "Wybierz dostawcę",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "Kompatybilny z OpenAI",
+		"openaiCompatibleBaseUrlLabel": "Bazowy URL:",
+		"openaiCompatibleApiKeyLabel": "Klucz API:",
 		"openaiKeyLabel": "Klucz OpenAI:",
 		"modelLabel": "Model",
 		"selectModelPlaceholder": "Wybierz model",
