--- a/webview-ui/src/i18n/locales/pt-BR/settings.json
+++ b/webview-ui/src/i18n/locales/pt-BR/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "Selecionar provedor",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "Compatível com OpenAI",
+		"openaiCompatibleBaseUrlLabel": "URL Base:",
+		"openaiCompatibleApiKeyLabel": "Chave de API:",
 		"openaiKeyLabel": "Chave OpenAI:",
 		"modelLabel": "Modelo",
 		"selectModelPlaceholder": "Selecionar modelo",
