--- a/webview-ui/src/i18n/locales/tr/settings.json
+++ b/webview-ui/src/i18n/locales/tr/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "Sağlayıcı seç",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI Uyumlu",
+		"openaiCompatibleBaseUrlLabel": "Temel URL:",
+		"openaiCompatibleApiKeyLabel": "API Anahtarı:",
 		"openaiKeyLabel": "OpenAI Anahtarı:",
 		"modelLabel": "Model",
 		"selectModelPlaceholder": "Model seç",
