--- a/webview-ui/src/i18n/locales/vi/settings.json
+++ b/webview-ui/src/i18n/locales/vi/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "Chọn nhà cung cấp",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "Tương thích OpenAI",
+		"openaiCompatibleBaseUrlLabel": "URL cơ sở:",
+		"openaiCompatibleApiKeyLabel": "Khóa API:",
 		"openaiKeyLabel": "Khóa OpenAI:",
 		"modelLabel": "Mô hình",
 		"selectModelPlaceholder": "Chọn mô hình",
