--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "选择提供商",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI 兼容",
+		"openaiCompatibleBaseUrlLabel": "基础 URL:",
+		"openaiCompatibleApiKeyLabel": "API 密钥:",
 		"openaiKeyLabel": "OpenAI 密钥：",
 		"modelLabel": "模型",
 		"selectModelPlaceholder": "选择模型",
