--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "選擇提供者",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI 相容",
+		"openaiCompatibleBaseUrlLabel": "基礎 URL：",
+		"openaiCompatibleApiKeyLabel": "API 金鑰：",
 		"openaiKeyLabel": "OpenAI 金鑰：",
 		"modelLabel": "模型",
 		"selectModelPlaceholder": "選擇模型",
