--- a/webview-ui/src/i18n/locales/nl/settings.json
+++ b/webview-ui/src/i18n/locales/nl/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "Selecteer provider",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI-compatibel",
+		"openaiCompatibleBaseUrlLabel": "Basis-URL:",
+		"openaiCompatibleApiKeyLabel": "API-sleutel:",
 		"openaiKeyLabel": "OpenAI-sleutel:",
 		"modelLabel": "Model",
 		"selectModelPlaceholder": "Selecteer model",
