--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -40,6 +40,9 @@
 		"selectProviderPlaceholder": "Выберите провайдера",
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
+		"openaiCompatibleProvider": "OpenAI-совместимый",
+		"openaiCompatibleBaseUrlLabel": "Базовый URL:",
+		"openaiCompatibleApiKeyLabel": "Ключ API:",
 		"openaiKeyLabel": "Ключ OpenAI:",
 		"modelLabel": "Модель",
 		"selectModelPlaceholder": "Выберите модель",
