--- a/webview-ui/src/i18n/locales/fr/settings.json
+++ b/webview-ui/src/i18n/locales/fr/settings.json
@@ -183,6 +183,8 @@
 		"openAiApiKey": "Clé API OpenAI",
 		"apiKey": "Clé API",
 		"openAiBaseUrl": "URL de base",
+		"openAiApiTimeout": "Délai d'attente (minutes)",
+		"openAiApiTimeoutDescription": "Délai d'attente pour les requêtes API au fournisseur (min. 5 min). Si aucune réponse dans ce délai, la requête sera réessayée. Augmentez cette valeur pour les modèles plus lents.",
 		"getOpenAiApiKey": "Obtenir la clé API OpenAI",
 		"mistralApiKey": "Clé API Mistral",
 		"getMistralApiKey": "Obtenir la clé API Mistral / Codestral",
