--- a/webview-ui/src/i18n/locales/es/settings.json
+++ b/webview-ui/src/i18n/locales/es/settings.json
@@ -183,6 +183,8 @@
 		"openAiApiKey": "Clave API de OpenAI",
 		"apiKey": "Clave API",
 		"openAiBaseUrl": "URL base",
+		"openAiApiTimeout": "Tiempo de espera (minutos)",
+		"openAiApiTimeoutDescription": "Tiempo de espera para solicitudes de API al proveedor (mín. 5 min). Si no hay respuesta en este período, la solicitud se reintentará. Aumente este valor para modelos más lentos.",
 		"getOpenAiApiKey": "Obtener clave API de OpenAI",
 		"mistralApiKey": "Clave API de Mistral",
 		"getMistralApiKey": "Obtener clave API de Mistral / Codestral",
