--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -183,6 +183,8 @@
 		"openAiApiKey": "OpenAI API कुंजी",
 		"apiKey": "API कुंजी",
 		"openAiBaseUrl": "बेस URL",
+		"openAiApiTimeout": "Timeout (मिनट)",
+		"openAiApiTimeoutDescription": "Timeout for API requests to Provider (min 5 min). if no response within this period, the request is retried. Increase for slower models.",
 		"getOpenAiApiKey": "OpenAI API कुंजी प्राप्त करें",
 		"mistralApiKey": "Mistral API कुंजी",
 		"getMistralApiKey": "Mistral / Codestral API कुंजी प्राप्त करें",
