feat: Add embedding dimension and select dimension placeholder to localization files

--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -61,6 +61,8 @@
 			"classification": "Classificació",
 			"clustering": "Agrupació"
 		},
+		"embeddingDimension": "Dimensió d'embedding",
+		"selectDimensionPlaceholder": "Seleccionar dimensió",
 		"qdrantUrlLabel": "URL de Qdrant",
 		"qdrantKeyLabel": "Clau de Qdrant:",
 		"startIndexingButton": "Iniciar indexació",
