--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -61,6 +61,8 @@
 			"classification": "Classification",
 			"clustering": "Clustering"
 		},
+		"embeddingDimension": "Embedding Dimension",
+		"selectDimensionPlaceholder": "Select Dimension",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant Key:",
 		"startIndexingButton": "Start Indexing",
