--- a/webview-ui/src/i18n/locales/fr/settings.json
+++ b/webview-ui/src/i18n/locales/fr/settings.json
@@ -61,6 +61,8 @@
 			"classification": "Classification",
 			"clustering": "Regroupement"
 		},
+		"embeddingDimension": "Dimension d'embedding",
+		"selectDimensionPlaceholder": "Sélectionner la dimension",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Clé Qdrant :",
 		"startIndexingButton": "Démarrer l'indexation",
