--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -61,6 +61,8 @@
 			"classification": "Classificazione",
 			"clustering": "Clustering"
 		},
+		"embeddingDimension": "Dimensione embedding",
+		"selectDimensionPlaceholder": "Seleziona dimensione",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Chiave Qdrant:",
 		"startIndexingButton": "Avvia indicizzazione",
