--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -61,6 +61,8 @@
 			"classification": "Klasyfikacja",
 			"clustering": "Klastrowanie"
 		},
+		"embeddingDimension": "Wymiar osadzania",
+		"selectDimensionPlaceholder": "Wybierz wymiar",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Klucz Qdrant:",
 		"startIndexingButton": "Rozpocznij indeksowanie",
