--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -61,6 +61,8 @@
 			"classification": "Классификация",
 			"clustering": "Кластеризация"
 		},
+		"embeddingDimension": "Размерность эмбеддинга",
+		"selectDimensionPlaceholder": "Выберите размерность",
 		"qdrantUrlLabel": "URL Qdrant",
 		"qdrantKeyLabel": "Ключ Qdrant:",
 		"startIndexingButton": "Начать индексацию",
