--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -61,6 +61,8 @@
 			"classification": "分類",
 			"clustering": "分群"
 		},
+		"embeddingDimension": "嵌入維度",
+		"selectDimensionPlaceholder": "選取維度",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant 金鑰：",
 		"startIndexingButton": "開始索引",
