--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -333,6 +333,25 @@
 	},
 	"contextManagement": {
 		"description": "Управляйте, какая информация включается в окно контекста ИИ, что влияет на расход токенов и качество ответов",
+		"autoCondenseContextPercent": {
+			"label": "Порог для запуска интеллектуального сжатия контекста",
+			"description": "Когда контекстное окно достигает этого порога, Roo автоматически его сожмёт."
+		},
+		"condensingApiConfiguration": {
+			"label": "API Configuration for Context Condensing",
+			"description": "Select which API configuration to use for context condensing operations. Leave unselected to use the current active configuration.",
+			"useCurrentConfig": "Default"
+		},
+		"customCondensingPrompt": {
+			"label": "Пользовательская подсказка для сжатия контекста",
+			"description": "Пользовательская системная подсказка для сжатия контекста. Оставьте пустым, чтобы использовать подсказку по умолчанию.",
+			"placeholder": "Enter your custom condensing prompt here...\n\nYou can use the same structure as the default prompt:\n- Previous Conversation\n- Current Work\n- Key Technical Concepts\n- Relevant Files and Code\n- Problem Solving\n- Pending Tasks and Next Steps",
+			"reset": "Reset to Default",
+			"hint": "Empty = use default prompt"
+		},
+		"autoCondenseContext": {
+			"name": "Автоматически запускать интеллектуальное сжатие контекста"
+		},
 		"openTabs": {
 			"label": "Лимит контекста открытых вкладок",
 			"description": "Максимальное количество открытых вкладок VSCode, включаемых в контекст. Большее значение даёт больше контекста, но увеличивает расход токенов."
@@ -430,26 +449,6 @@
 		}
 	},
 	"experimental": {
-		"condensingApiConfiguration": {
-			"label": "API Configuration for Context Condensing",
-			"description": "Select which API configuration to use for context condensing operations. Leave unselected to use the current active configuration.",
-			"useCurrentConfig": "Default"
-		},
-		"customCondensingPrompt": {
-			"label": "Пользовательская подсказка для сжатия контекста",
-			"description": "Пользовательская системная подсказка для сжатия контекста. Оставьте пустым, чтобы использовать подсказку по умолчанию.",
-			"placeholder": "Enter your custom condensing prompt here...\n\nYou can use the same structure as the default prompt:\n- Previous Conversation\n- Current Work\n- Key Technical Concepts\n- Relevant Files and Code\n- Problem Solving\n- Pending Tasks and Next Steps",
-			"reset": "Reset to Default",
-			"hint": "Empty = use default prompt"
-		},
-		"autoCondenseContextPercent": {
-			"label": "Порог для запуска интеллектуального сжатия контекста",
-			"description": "Когда контекстное окно достигает этого порога, Roo автоматически его сожмёт."
-		},
-		"AUTO_CONDENSE_CONTEXT": {
-			"name": "Автоматически запускать интеллектуальное сжатие контекста",
-			"description": "Интеллектуальное сжатие контекста использует вызов LLM для обобщения предыдущего разговора, когда контекстное окно задачи достигает заданного порога, вместо удаления старых сообщений при заполнении контекста."
-		},
 		"DIFF_STRATEGY_UNIFIED": {
 			"name": "Использовать экспериментальную стратегию унифицированного диффа",
 			"description": "Включает экспериментальную стратегию унифицированного диффа. Может уменьшить количество повторных попыток из-за ошибок модели, но может привести к неожиданному поведению или неверным правкам. Включайте только если готовы внимательно проверять все изменения."
