--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -338,16 +338,16 @@
 			"description": "Когда контекстное окно достигает этого порога, Roo автоматически его сожмёт."
 		},
 		"condensingApiConfiguration": {
-			"label": "API Configuration for Context Condensing",
-			"description": "Select which API configuration to use for context condensing operations. Leave unselected to use the current active configuration.",
-			"useCurrentConfig": "Default"
+			"label": "Конфигурация API для сжатия контекста",
+			"description": "Выберите конфигурацию API для операций сжатия контекста. Оставьте невыбранным, чтобы использовать текущую активную конфигурацию.",
+			"useCurrentConfig": "По умолчанию"
 		},
 		"customCondensingPrompt": {
 			"label": "Пользовательская подсказка для сжатия контекста",
 			"description": "Пользовательская системная подсказка для сжатия контекста. Оставьте пустым, чтобы использовать подсказку по умолчанию.",
-			"placeholder": "Enter your custom condensing prompt here...\n\nYou can use the same structure as the default prompt:\n- Previous Conversation\n- Current Work\n- Key Technical Concepts\n- Relevant Files and Code\n- Problem Solving\n- Pending Tasks and Next Steps",
-			"reset": "Reset to Default",
-			"hint": "Empty = use default prompt"
+			"placeholder": "Введите здесь свой пользовательский промпт для сжатия...\n\nВы можете использовать ту же структуру, что и в промпте по умолчанию:\n- Предыдущий разговор\n- Текущая работа\n- Ключевые технические концепции\n- Соответствующие файлы и код\n- Решение проблем\n- Ожидающие задачи и следующие шаги",
+			"reset": "Сбросить на значение по умолчанию",
+			"hint": "Пусто = использовать промпт по умолчанию"
 		},
 		"autoCondenseContext": {
 			"name": "Автоматически запускать интеллектуальное сжатие контекста"
