--- a/.changeset/v3.19.2.md
+++ b/.changeset/v3.19.2.md
@@ -5,11 +5,12 @@
 - Add support for Streamable HTTP Transport MCP servers (thanks @taylorwilsdon!)
 - Add cached read and writes to stats and cost calculation for LiteLLM provider (thanks @mollux!)
 - Prevent dump of an entire file into the context on user edit (thanks @KJ7LNW!)
-- Fix the label of the OpenAI-compatible API keys
+- Fix directory link handling in markdown (thanks @KJ7LNW!)
 - Prevent start_line/end_line in apply_diff REPLACE (thanks @KJ7LNW!)
+- Unify history item UI with TaskItem and TaskItemHeader (thanks @KJ7LNW!)
+- Fix the label of the OpenAI-compatible API keys
 - Fix Virtuoso footer re-rendering issue (thanks @kiwina!)
 - Optimize ChatRowContent layout and styles (thanks @zhangtony239!)
 - Release memory in apply diff (thanks @xyOz-dev!)
-- Unify history item UI with TaskItem and TaskItemHeader (thanks @KJ7LNW!)
 - Upgrade Node.js to v20.19.2 for security enhancements (thanks @PeterDaveHello!)
 - Fix typos (thanks @noritaka1166!)
