--- a/webview-ui/src/i18n/locales/de/settings.json
+++ b/webview-ui/src/i18n/locales/de/settings.json
@@ -182,6 +182,8 @@
 		"getXaiApiKey": "xAI API-Schlüssel erhalten",
 		"litellmApiKey": "LiteLLM API-Schlüssel",
 		"litellmBaseUrl": "LiteLLM Basis-URL",
+		"modelharborApiKey": "ModelHarbor API-Schlüssel",
+		"getModelHarborApiKey": "ModelHarbor API-Schlüssel erhalten",
 		"awsCredentials": "AWS Anmeldedaten",
 		"awsProfile": "AWS Profil",
 		"awsProfileName": "AWS Profilname",
