Add missing translations for OpenAI-compatible model dimension settings in all locales

--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -47,6 +47,9 @@
 		"openaiCompatibleProvider": "OpenAI-совместимый",
 		"openaiCompatibleBaseUrlLabel": "Базовый URL:",
 		"openaiCompatibleApiKeyLabel": "Ключ API:",
+		"openaiCompatibleModelDimensionLabel": "Размерность эмбеддинга:",
+		"openaiCompatibleModelDimensionPlaceholder": "напр., 1536",
+		"openaiCompatibleModelDimensionDescription": "Размерность эмбеддинга (размер выходных данных) для вашей модели. Проверьте документацию вашего провайдера для этого значения. Распространенные значения: 384, 768, 1536, 3072.",
 		"openaiKeyLabel": "Ключ OpenAI:",
 		"modelLabel": "Модель",
 		"selectModelPlaceholder": "Выберите модель",
