--- a/webview-ui/src/i18n/locales/fr/settings.json
+++ b/webview-ui/src/i18n/locales/fr/settings.json
@@ -47,6 +47,9 @@
 		"openaiCompatibleProvider": "Compatible OpenAI",
 		"openaiCompatibleBaseUrlLabel": "URL de base :",
 		"openaiCompatibleApiKeyLabel": "Clé API :",
+		"openaiCompatibleModelDimensionLabel": "Dimension d'Embedding :",
+		"openaiCompatibleModelDimensionPlaceholder": "ex., 1536",
+		"openaiCompatibleModelDimensionDescription": "La dimension d'embedding (taille de sortie) pour votre modèle. Consultez la documentation de votre fournisseur pour cette valeur. Valeurs courantes : 384, 768, 1536, 3072.",
 		"openaiKeyLabel": "Clé OpenAI :",
 		"modelLabel": "Modèle",
 		"selectModelPlaceholder": "Sélectionner un modèle",
