--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -47,6 +47,9 @@
 		"openaiCompatibleProvider": "OpenAI互換",
 		"openaiCompatibleBaseUrlLabel": "ベースURL：",
 		"openaiCompatibleApiKeyLabel": "APIキー：",
+		"openaiCompatibleModelDimensionLabel": "埋め込みディメンション：",
+		"openaiCompatibleModelDimensionPlaceholder": "例：1536",
+		"openaiCompatibleModelDimensionDescription": "モデルの埋め込みディメンション（出力サイズ）。この値についてはプロバイダーのドキュメントを確認してください。一般的な値：384、768、1536、3072。",
 		"openaiKeyLabel": "OpenAIキー：",
 		"modelLabel": "モデル",
 		"selectModelPlaceholder": "モデルを選択",
