--- a/webview-ui/src/i18n/locales/nl/settings.json
+++ b/webview-ui/src/i18n/locales/nl/settings.json
@@ -47,6 +47,9 @@
 		"openaiCompatibleProvider": "OpenAI-compatibel",
 		"openaiCompatibleBaseUrlLabel": "Basis-URL:",
 		"openaiCompatibleApiKeyLabel": "API-sleutel:",
+		"openaiCompatibleModelDimensionLabel": "Embedding Dimensie:",
+		"openaiCompatibleModelDimensionPlaceholder": "bijv., 1536",
+		"openaiCompatibleModelDimensionDescription": "De embedding dimensie (uitvoergrootte) voor uw model. Controleer de documentatie van uw provider voor deze waarde. Veelvoorkomende waarden: 384, 768, 1536, 3072.",
 		"openaiKeyLabel": "OpenAI-sleutel:",
 		"modelLabel": "Model",
 		"selectModelPlaceholder": "Selecteer model",
