--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -47,6 +47,9 @@
 		"openaiCompatibleProvider": "Kompatybilny z OpenAI",
 		"openaiCompatibleBaseUrlLabel": "Bazowy URL:",
 		"openaiCompatibleApiKeyLabel": "Klucz API:",
+		"openaiCompatibleModelDimensionLabel": "Wymiar Embeddingu:",
+		"openaiCompatibleModelDimensionPlaceholder": "np., 1536",
+		"openaiCompatibleModelDimensionDescription": "Wymiar embeddingu (rozmiar wyjściowy) dla twojego modelu. Sprawdź dokumentację swojego dostawcy, aby uzyskać tę wartość. Typowe wartości: 384, 768, 1536, 3072.",
 		"openaiKeyLabel": "Klucz OpenAI:",
 		"modelLabel": "Model",
 		"selectModelPlaceholder": "Wybierz model",
