--- a/webview-ui/src/i18n/locales/tr/settings.json
+++ b/webview-ui/src/i18n/locales/tr/settings.json
@@ -47,6 +47,9 @@
 		"openaiCompatibleProvider": "OpenAI Uyumlu",
 		"openaiCompatibleBaseUrlLabel": "Temel URL:",
 		"openaiCompatibleApiKeyLabel": "API Anahtarı:",
+		"openaiCompatibleModelDimensionLabel": "Gömme Boyutu:",
+		"openaiCompatibleModelDimensionPlaceholder": "örn., 1536",
+		"openaiCompatibleModelDimensionDescription": "Modeliniz için gömme boyutu (çıktı boyutu). Bu değer için sağlayıcınızın belgelerine bakın. Yaygın değerler: 384, 768, 1536, 3072.",
 		"openaiKeyLabel": "OpenAI Anahtarı:",
 		"modelLabel": "Model",
 		"selectModelPlaceholder": "Model seç",
