--- a/webview-ui/src/i18n/locales/vi/settings.json
+++ b/webview-ui/src/i18n/locales/vi/settings.json
@@ -47,6 +47,9 @@
 		"openaiCompatibleProvider": "Tương thích OpenAI",
 		"openaiCompatibleBaseUrlLabel": "URL cơ sở:",
 		"openaiCompatibleApiKeyLabel": "Khóa API:",
+		"openaiCompatibleModelDimensionLabel": "Kích thước Embedding:",
+		"openaiCompatibleModelDimensionPlaceholder": "vd., 1536",
+		"openaiCompatibleModelDimensionDescription": "Kích thước embedding (kích thước đầu ra) cho mô hình của bạn. Kiểm tra tài liệu của nhà cung cấp để biết giá trị này. Giá trị phổ biến: 384, 768, 1536, 3072.",
 		"openaiKeyLabel": "Khóa OpenAI:",
 		"modelLabel": "Mô hình",
 		"selectModelPlaceholder": "Chọn mô hình",
