feat: Adding UI and settings for the max context window
- added `MaxContextWindowControl.tsx`
- added maxContextWindow in `settings.json`

--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -497,6 +497,11 @@
 		"description": "Controls randomness in the model's responses.",
 		"rangeDescription": "Higher values make output more random, lower values make it more deterministic."
 	},
+	"maxContextWindow": {
+		"useCustom": "Use custom context max window",
+		"description": "Controls randomness in the model's responses.",
+		"rangeDescription": "Higher values make output more random, lower values make it more deterministic."
+	},
 	"modelInfo": {
 		"supportsImages": "Supports images",
 		"noImages": "Does not support images",
