--- a/webview-ui/src/i18n/locales/nl/settings.json
+++ b/webview-ui/src/i18n/locales/nl/settings.json
@@ -497,6 +497,11 @@
 		"description": "Bepaalt de willekeurigheid in de antwoorden van het model.",
 		"rangeDescription": "Hogere waarden maken de output willekeuriger, lagere waarden maken deze deterministischer."
 	},
+	"maxContextWindow": {
+		"useCustom": "Gebruik aangepast maximaal contextvenster",
+		"description": "Stelt de maximale grootte van het contextvenster voor het model in. Wanneer conversaties deze limiet naderen, condenseert Roo Code automatisch oudere berichten om binnen de beperking te blijven.",
+		"rangeDescription": "Hogere waarden zorgen voor langere conversaties voordat er condensatie plaatsvindt, lagere waarden activeren eerder condensatie om binnen de API-snelheidslimieten te blijven."
+	},
 	"modelInfo": {
 		"supportsImages": "Ondersteunt afbeeldingen",
 		"noImages": "Ondersteunt geen afbeeldingen",
