--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -497,6 +497,11 @@
 		"description": "Управляет случайностью ответов модели.",
 		"rangeDescription": "Более высокие значения делают ответы более случайными, низкие — более детерминированными."
 	},
+	"maxContextWindow": {
+		"useCustom": "Использовать пользовательское максимальное контекстное окно",
+		"description": "Устанавливает максимальный размер контекстного окна для модели. Когда разговоры приближаются к этому пределу, Roo Code автоматически сжимает старые сообщения, чтобы оставаться в рамках ограничения.",
+		"rangeDescription": "Более высокие значения допускают более длительные разговоры перед сжатием, более низкие значения запускают сжатие раньше, чтобы оставаться в пределах ограничений скорости API."
+	},
 	"modelInfo": {
 		"supportsImages": "Поддерживает изображения",
 		"noImages": "Не поддерживает изображения",
