--- a/webview-ui/src/i18n/locales/tr/settings.json
+++ b/webview-ui/src/i18n/locales/tr/settings.json
@@ -497,6 +497,11 @@
 		"description": "Model yanıtlarındaki rastgeleliği kontrol eder.",
 		"rangeDescription": "Daha yüksek değerler çıktıyı daha rastgele yapar, daha düşük değerler daha deterministik hale getirir."
 	},
+	"maxContextWindow": {
+		"useCustom": "Özel maksimum bağlam penceresini kullan",
+		"description": "Model için maksimum bağlam penceresi boyutunu ayarlar. Konuşmalar bu sınıra yaklaştığında, Roo Kodu kısıtlama dahilinde kalmak için eski mesajları otomatik olarak yoğunlaştıracaktır.",
+		"rangeDescription": "Daha yüksek değerler, yoğunlaşmadan önce daha uzun görüşmelere izin verirken, daha düşük değerler API oran sınırları içinde kalmak için daha erken yoğunlaşmayı tetikler."
+	},
 	"modelInfo": {
 		"supportsImages": "Görüntüleri destekler",
 		"noImages": "Görüntüleri desteklemez",
