--- a/webview-ui/src/i18n/locales/vi/settings.json
+++ b/webview-ui/src/i18n/locales/vi/settings.json
@@ -497,6 +497,11 @@
 		"description": "Kiểm soát tính ngẫu nhiên trong phản hồi của mô hình.",
 		"rangeDescription": "Giá trị cao hơn làm cho đầu ra ngẫu nhiên hơn, giá trị thấp hơn làm cho nó xác định hơn."
 	},
+	"maxContextWindow": {
+		"useCustom": "Sử dụng cửa sổ ngữ cảnh tối đa tùy chỉnh",
+		"description": "Đặt kích thước cửa sổ ngữ cảnh tối đa cho mô hình. Khi các cuộc hội thoại đạt đến giới hạn này, Roo Code sẽ tự động cô đọng các tin nhắn cũ hơn để duy trì trong phạm vi ràng buộc.",
+		"rangeDescription": "Giá trị cao hơn cho phép các cuộc hội thoại dài hơn trước khi ngưng tụ, giá trị thấp hơn kích hoạt ngưng tụ sớm hơn để duy trì trong giới hạn tốc độ API."
+	},
 	"modelInfo": {
 		"supportsImages": "Hỗ trợ hình ảnh",
 		"noImages": "Không hỗ trợ hình ảnh",
