--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -497,6 +497,11 @@
 		"description": "控制模型回應的隨機性",
 		"rangeDescription": "較高值使輸出更隨機，較低值更確定"
 	},
+	"maxContextWindow": {
+		"useCustom": "使用自訂最大上下文視窗",
+		"description": "設定模型的最大上下文視窗大小。當對話接近此限制時，Roo Code 將自動壓縮舊訊息以保持在限制範圍內。.",
+		"rangeDescription": "較高的值允許在壓縮之前進行更長的對話，較低的值會更快觸發壓縮以保持在 API 速率限制內。"
+	},
 	"modelInfo": {
 		"supportsImages": "支援影像",
 		"noImages": "不支援影像",
