--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -504,6 +504,7 @@
 		"rangeDescription": "उच्च मान आउटपुट को अधिक यादृच्छिक बनाते हैं, निम्न मान इसे अधिक निर्धारित बनाते हैं।"
 	},
 	"maxContextWindow": {
+		"maxContextWindow": "",
 		"useCustom": "कस्टम अधिकतम संदर्भ विंडो का उपयोग करें",
 		"description": "मॉडल के लिए अधिकतम संदर्भ विंडो आकार सेट करता है। जब बातचीत इस सीमा के करीब पहुंचती है, तो रू कोड पुराने संदेशों को स्वचालित रूप से सीमा के भीतर रहने के लिए संक्षिप्त कर देगा।",
 		"rangeDescription": "उच्चतर मान संघनन से पहले लम्बी बातचीत की अनुमति देते हैं, जबकि निम्न मान API दर सीमाओं के भीतर रहने के लिए शीघ्र ही संघनन को सक्रिय कर देते हैं।"
