--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -504,6 +504,7 @@
 		"rangeDescription": "Valori più alti rendono l'output più casuale, valori più bassi lo rendono più deterministico."
 	},
 	"maxContextWindow": {
+		"maxContextWindow": "Finestra di contesto massima",
 		"useCustom": "Utilizza la finestra di contesto massima personalizzata",
 		"description": "Imposta la dimensione massima della finestra di contesto per il modello. Quando le conversazioni si avvicinano a questo limite, Roo Code condensa automaticamente i messaggi più vecchi per rimanere entro il vincolo.",
 		"rangeDescription": "Valori più alti consentono conversazioni più lunghe prima della condensazione, mentre valori più bassi attivano la condensazione prima per restare entro i limiti di velocità API."
