--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -504,6 +504,7 @@
 		"rangeDescription": "高い値は出力をよりランダムに、低い値はより決定論的にします。"
 	},
 	"maxContextWindow": {
+		"maxContextWindow": "最大コンテキストウィンドウ",
 		"useCustom": "カスタム最大コンテキストウィンドウを使用する",
 		"description": "モデルの最大コンテキストウィンドウサイズを設定します。会話がこの制限に近づくと、Roo Code は古いメッセージを自動的に圧縮して制限内に収めます。",
 		"rangeDescription": "値が大きいほど、圧縮前の会話が長くなり、値が小さいほど、API レート制限内に収まるように圧縮が早くトリガーされます。"
